# synthetix

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  compose.yaml  goals.md  pyproject.toml
docs/architecture/: baseline.md
docs/benchmarks/: registry.json
docs/operations/: security.md
docs/progress/: frozen-evaluation-progress.md  orchestrator-progress.md  quality-loop-progress.md  repair-quality-loop-progress.md  research-design-progress.md
docs/protocols/: research-design-standards-alignment.md  scientific-boundary.md
docs/specs/: 00-product-goals.md  01-benchmark-thresholds.md  02-pipeline-predicted-metrics.md  03-professional-report-pdf.md  04-transparent-simulation-dashboard.md  05-validation-and-holdout-readiness.md  06-agent-orchestrator-loop.md  07-groq-fallback-and-promptfoo-gates.md  07-honest-predictor-improvement.md  08-professional-echarts-analytics.md  08-rich-reporting-upgrade.md  09-research-design-study-plan.md  10-golden-path-intake-reset.md  11-report-chart-quality-recovery.md  12-research-basis-professional-report-recovery.md
evals/: final_compliance.promptfoo.yaml  implementation_readiness.promptfoo.yaml  plan_constraints.promptfoo.yaml
examples/: carbon-neutral.yaml  coffee.yaml  fast-food-study.yaml  fast-food-transcript.md  research-design-blueprint.yaml
examples/deprecated/: README.md  (+2 more)
migrations/: env.py
research/: README.md  golden_paper_contract.json
sdlc/: constraints.json  eval_policy.json  events.jsonl  gryph_summary.json  phase_gates.yaml  state.json  subagents.yaml
(+151 files in other folders)
