[project]
name = "synthetix"
version = "0.1.0"
description = "Self-hosted synthetic scenario exploration engine"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14",
  "aiosqlite>=0.20",
  "fastapi>=0.115",
  "httpx>=0.27",
  "jinja2>=3.1",
  "matplotlib>=3.8",
  "polars>=1.0",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "pypdf>=5.0",
  "python-multipart>=0.0.12",
  "pyyaml>=6.0",
  "reportlab>=4.2",
  "sqlalchemy>=2.0",
  "typer>=0.12",
  "uvicorn>=0.30",
  "weasyprint>=62",
]

[project.optional-dependencies]
dev = [
  "hypothesis>=6.0",
  "mypy>=1.11",
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
  "types-PyYAML>=6.0",
  "types-reportlab>=4.2",
]

[project.scripts]
synthetix = "synthetix.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/synthetix"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true

[[tool.mypy.overrides]]
module = ["weasyprint", "weasyprint.*"]
ignore_missing_imports = true
